[package]
name = "game_stat"
version = "0.1.1"
edition = "2021"
categories = ["game-development"]
keywords = ["gamedev", "stats"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "a library for handling stats that can change with modifiers, most commonly seen in games"
repository = "https://github.com/TanTanDev/game_stat.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive", "rc"] }

[features]
default = ["serde"]
sync = []
serde = ["dep:serde"]
